Fixed letter-spacing in header

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ figure {
 
     box-sizing: border-box;
     display: grid;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto auto 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     row-gap: 30px;
 }
@@ -406,10 +406,22 @@ figure {
 
 /* Nav */
 
+.main-navigation {
+    margin: auto 0;
+}
+
 .main-navigation__list {
     display: flex;
     justify-content: end;
     column-gap: 40px;
+}
+
+.main-navigation__link {
+    
+}
+
+.main-navigation__link span {
+    letter-spacing: normal;
 }
 
 /* main */
@@ -468,7 +480,7 @@ figure {
 
 .slide-number-wrap {
     background-color: var(--special-yellow-light);
-    padding: 0 50px;
+    padding: 0 60px;
     box-sizing: border-box;
     height: 135px;
     text-align: end;
@@ -478,6 +490,10 @@ figure {
     font: var(--font-slide);
     color: var(--basic-white);
     display: block;
+}
+
+.slider-content__slide-number span{
+    letter-spacing: -0.07em;
 }
 
 .slide-picture {
